@@ -5,10 +5,13 @@
 
 2002-11-26  Mo DeJong  <mdejong@uncounted.org>
 
+	* gui/Makefile.am: Add winprint.tcl.
+	* gui/Makefile.in: Regen.
 	* gui/editorpane.tcl (print_file): Don't
 	attempt to delete a printer dialog object
 	if it does not exist. This fixes a problem
 	printing the grep pane under Windows.
+	* gui/tclIndex: Regen.
 	* gui/winprint.tcl: Resurrect windows
 	printing file that was erroneously removed
 	on 2000-05-26. These methods are used
